third_party/rust/thiserror/v1/crate/tests/ui/duplicate-struct-source.stderr
error: duplicate #[source] attribute
 --> tests/ui/duplicate-struct-source.rs:7:5
  |
7 |     #[source]
  |     ^^^^^^^^^
